[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/player/Player-down1.png" type="Texture" id=1]
[ext_resource path="res://sprites/player/Player-idle1.png" type="Texture" id=2]
[ext_resource path="res://sprites/player/Player-left1.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/Player-up1.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/Player-right1.png" type="Texture" id=5]
[ext_resource path="res://player/Player.gd" type="Script" id=6]
[ext_resource path="res://ARIAL.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://explosion/Explosion.tscn" type="PackedScene" id=8]
[ext_resource path="res://VictoryMsg.tscn" type="PackedScene" id=9]
[ext_resource path="res://sprites/player/Player-dead1.png" type="Texture" id=10]
[ext_resource path="res://sprites/player/Player-dead2.png" type="Texture" id=11]
[ext_resource path="res://sprites/player/Player-win1.png" type="Texture" id=12]
[ext_resource path="res://sprites/player/Player-win2.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "win",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 15 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 7 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 38, 20 )
scale = Vector2( 2, 2 )
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Explosion" parent="." instance=ExtResource( 8 )]
visible = false

[node name="LossText" type="RichTextLabel" parent="."]
visible = false
margin_left = -221.5
margin_top = -30.5
margin_right = 260.5
margin_bottom = 185.5
custom_fonts/normal_font = SubResource( 3 )
text = "You lose lol?!?!?!??!"

[node name="CenterContainer" type="CenterContainer" parent="LossText"]
margin_left = -79.0
margin_top = -44.0
margin_right = 519.0
margin_bottom = 182.0

[node name="Button" type="Button" parent="LossText/CenterContainer"]
margin_left = 264.0
margin_top = 103.0
margin_right = 334.0
margin_bottom = 123.0
text = "RETRYYYY"

[node name="Victory text" parent="." instance=ExtResource( 9 )]
margin_left = -174.5
margin_top = -62.0
margin_right = 602.5
margin_bottom = 270.0

[node name="CenterContainer" type="CenterContainer" parent="Victory text"]
margin_left = -52.5
margin_top = 6.0
margin_right = 400.5
margin_bottom = 224.0

[node name="Button" type="Button" parent="Victory text/CenterContainer"]
margin_left = 170.0
margin_top = 99.0
margin_right = 283.0
margin_bottom = 119.0
text = "Next level!!!!!!!!!"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="LossText/CenterContainer/Button" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="Victory text/CenterContainer/Button" to="." method="_on_Button_pressed"]
